Fix ultimi dettagli